tests/error/modifier_errors/ctrl_arg_not_assigned.err
Error: Drop violation (at $FILE:7:17)
  | 
5 | @guppy
6 | def test() -> None:
7 |     with control(qubit()):
  |                  ^^^^^^^ Expression with non-droppable type `qubit` is leaked

Help: Consider assigning this value to a local variable

Guppy compilation failed due to 1 previous error
